feat(chart): implement OHLC chart  with EMA and ADX indicators
